Tiny sizing issue on mobile MC subscribe
Fixes #111

--- a/stylesheets/main-menu.scss
+++ b/stylesheets/main-menu.scss
@@ -208,6 +208,7 @@ body.past-header {
     @include transition(width, 0.3s, ease-in-out);
     -webkit-appearance: none;
     border-radius:0;
+    -webkit-appearance: none; 
   }
   a {
     display:inline-block;
